[vxb-html-2] Styles and structure improvements (#145)
* folder removal

* button list moks page

* new sip modal call

* error alert style

* header fix

* [vxb-html-2] Integrating grunt task to compile less to css

* small ui fixes

--- a/public/stylesheets/less/colors.less
+++ b/public/stylesheets/less/colors.less
@@ -4,6 +4,7 @@
 @contenttext:     #343c3e;
 @subText:         #58646e;
 @vx-purple:       #781e75; 
+@light-purple:    #FFEAFE;
 @navbar-grey:     #92a5a5;
 @border-grey:     #d7dfe1; 
 @panel-bg:         #fbfcfc;
