--- a/public/stylesheets/less/header.less
+++ b/public/stylesheets/less/header.less
@@ -3,6 +3,7 @@
   color: @navbar-grey ;
   border-bottom: 1px solid #d7dfe1;
   min-height: 0;
+  .rounded(0);
   .navbar-header{
     float: left;
   }
