--- a/public/stylesheets/less/btn.less
+++ b/public/stylesheets/less/btn.less
@@ -8,11 +8,11 @@ a{
   }
 }
 .btn{
-  padding-top: 9px;
-  padding-bottom: 9px;
   font-weight: bold;
 }
 .btn-default{
+  padding-top: 9px;
+  padding-bottom: 9px;
   background: @vx-purple;
   border-color: @vx-purple;
   color: #ffffff;
@@ -22,6 +22,17 @@ a{
     color: #fff;
     font-weight: bold;
   }
+}
+.btn-purple{
+  background: @vx-purple;
+  border-color: @vx-purple;
+  color: #ffffff;
+  &:hover{
+    background: darken(@vx-purple, 5%);
+    border-color: darken(@vx-purple, 5%);
+    color: #fff;
+    font-weight: bold;
+  }  
 }
 
 
