--- a/public/stylesheets/less/responsive.less
+++ b/public/stylesheets/less/responsive.less
@@ -14,6 +14,15 @@ smaller than 1024
 smaller than 760 
 ================================================================================= */
 @media screen and (max-width: 760px) {
+  
+  .createButton .body {
+    background: #fff;
+    
+    &:before {
+      display: none;
+    }
+  }
+
 }
 
 /* =================================================================================
