[MISC] Hiding "Buttons" button for now

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -68,7 +68,7 @@ html(lang='en')
         .pull-right
           if authenticated
             a.login.pull-left.user-pill(href="/") Home
-            a.login.pull-left.user-pill(href="/account/widgets") Buttons
+            // a.login.pull-left.user-pill(href="/account/widgets") Buttons
             a.login.pull-left.user-pill(href="/account/edit") Profile
             a.login.withripple.pull-left(href="/logout") Logout
           else
