[VXB-DB-2] Assigning Did/DidIds from the list on User signup (#148)
* [VXB-DB-2] Assigning Did/DidIds from the list on User signup

* [vxb-db-2] Fixing email login regexp

--- a/views/login.jade
+++ b/views/login.jade
@@ -31,7 +31,7 @@ block content
               'Content-Type': 'application/json; charset=utf-8'
             },
             data: {
-              email: $scope.login.uemail,
+              email: $scope.login.uemail.toLowerCase(),
               password: $scope.login.upassword
             }
           };
