[vxb-widget-generator-2] Adding ability to edit existing widgets (#150)
* [vxb-widget-generator-2] Fat commit advances on widget edit

* [vxb-widget-generator-2] Completing small pending details

* [vxb-widget-generator-2] Fixing dependency since old one is not working

--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -51,16 +51,16 @@ pre {
 }
 
 
+.user-pill {
+  margin-right: 5px;
+}
 
-
-
-
-.no-bottom-border-radius{
-    border-bottom-right-radius: 0 !important;
-    border-bottom-left-radius: 0 !important;
+.no-bottom-border-radius {
+  border-bottom-right-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
 }
 .progress.passwordStrength {
-    -webkit-border-radius: 0 !important;
+  -webkit-border-radius: 0 !important;
      -moz-border-radius: 0 !important;
           border-radius: 0 !important;
 }
