--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html(lang='en')
     link(href="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.min.css", rel="stylesheet")
     link(href="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css", rel="stylesheet")
 
-    script(src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
+    script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js")
     script(src="//webrtc.voxbone.com/js/jssip-latest.js ")
     script(src="//webrtc.voxbone.com/js/voxbone-latest.js")
 
