--- a/views/forgot.jade
+++ b/views/forgot.jade
@@ -31,7 +31,7 @@ block content
               'Content-Type': 'application/json; charset=utf-8'
             },
             data: {
-              email: $scope.forgot.uemail
+              email: $scope.forgot.uemail.toLowerCase()
             }
           };
           $http(req)
