--- a/views/login.jade
+++ b/views/login.jade
@@ -88,3 +88,5 @@ block content
                   button.btn.btn-default#login(ng-disabled="login_form.$invalid" ng-click="login.processForm()") Login
                   br
                   a(href="/forgot") Forgot your password?
+                  br
+                  a(href="/signup") Sign up here
