--- a/views/signup.jade
+++ b/views/signup.jade
@@ -165,4 +165,4 @@ block content
 
                   button.btn.btn-default#create(ng-disabled="create_account.$invalid" ng-click="account.processForm()") Create Account
                   br
-                  p Already have an account? #[a(href="login") Login here]
+                  p Already have an account? #[a(href="../login") Login here]
