[MISC] Fast fix for login message validation

--- a/views/login.jade
+++ b/views/login.jade
@@ -58,7 +58,7 @@ block content
 
             h1 Login
 
-            if message.trim
+            if message && message.trim
               if error
                 #tokenError.alert.alert-danger
                   div= message
