[vxb-db-1] Ability to add multiple sip uris per user (#155)
* [vxb-db-1] Creating screen to add sip uris

* [vxb-db-1] Refactoring sip provisiong function into separate module

* [vxb-db-1] Ability to save multiple sip uris per user

* [vxb-db-1] Grouping widgets by sip uri

--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -65,5 +65,16 @@ pre {
           border-radius: 0 !important;
 }
 
+.createButton.addSip{
+  .body {
+    background-repeat: repeat;
+    &:before{width: 0}
+  }
+
+  .save-sip {
+    margin-left: 0px;
+  }
+}
+
 /* adding this to prevent showing hidden tags while requirejs does its work*/
 [ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}
