--- a/views/account/widget-list.jade
+++ b/views/account/widget-list.jade
@@ -1,11 +1,15 @@
 extends ../layout
 
-block content
+block extra_head
   script.
-    require([
-      'jquery',
-      'bootstrap'
-    ])
+    require(['jquery', 'bootstrap'], function ($) {
+      $(document).on('hide.bs.collapse show.bs.collapse', '.sipCollapse', function () {
+        var trigger = $('[data-toggle="collapse"][href="#' + $(this).attr('id') + '"]');
+        trigger.find('i').toggleClass('glyphicon-chevron-down glyphicon-chevron-right');
+      });
+    });
+
+block content
   .main.buttonList
     .header
       .container
@@ -13,27 +17,40 @@ block content
         p This is a free account. You will only be able to create buttons with the same SIP. #[a(href="#" data-toggle="modal" data-target="#myModal") Upgrade Now]
 
         .actions-wrap
-          #[a.btn.btn-purple(data-toggle="modal" data-target="#myModal") Add SIP URI] #[a.btn.btn-success Add New Button]
+          if currentUser.sip_uris.length > 0 && !currentUser.paid
+            #[a.btn.btn-purple(data-toggle="modal" data-target="#myModal") Add SIP URI]
+          else
+            #[a.btn.btn-purple(href="/sip/new") Add SIP URI]
+
+          #[=" "] #[a.btn.btn-success Add New Button]
 
     .body
       .container
         .row
-          .col-xs-12
-            table.table
-              thead
-                tr
-                  td Sip URI
-                  td Configuration Name
-                  td Button Label
-                  td.text-right Actions
-              tbody
-                - each widget in widgets
-                  tr
-                    td #{widget.sip_uri}
-                    td #{widget.configuration_name}
-                    td #{widget.button_label || defaultBtnLabel}
-                    td.text-right
-                      #[a.btn.btn-sm.btn-primary(href="#") Copy Code] #[a.btn.btn-sm.btn-info(href="/widget/#{widget._id}/edit") View / Edit]
+          - each group in widgetsData
+            .col-xs-12
+              .group-header
+                h4
+                  a(data-toggle="collapse" href="##{group.widgets[0]._id}")
+                    #[i.glyphicon.glyphicon-chevron-down] #[span #{group._id}]
+
+              .sipCollapse.collapse.in(id="#{group.widgets[0]._id}")
+                table.table
+                  thead
+                    tr
+                      td(width="25%") Configuration Name
+                      td(width="25%") Button Label
+                      td(width="30%") Sip URI
+                      td.text-right Actions
+                  tbody
+                    - each widget in group.widgets
+                      tr
+                        td #{widget.configuration_name}
+                        td #{widget.button_label || defaultBtnLabel}
+                        td #{widget.sip_uri}
+                        td.text-right
+                          #[a.btn.btn-sm.btn-primary(href="#") Copy Code] #[a.btn.btn-sm.btn-info(href="/widget/#{widget._id}/edit") View / Edit]
+
   .modal.fade.add-new-modal#myModal(tabindex="-1" role="dialog" aria-labelledby="myModalLabel")
     .modal-dialog(role="document")
       .modal-content
