[vxb-widget-generator-4] Ability to add new buttons and other fixes (#158)

--- a/views/account/widget-list.jade
+++ b/views/account/widget-list.jade
@@ -22,7 +22,7 @@ block content
           else
             #[a.btn.btn-purple(href="/sip/new") Add SIP URI]
 
-          #[=" "] #[a.btn.btn-success Add New Button]
+          #[=" "] #[a.btn.btn-success(href="/widget/new") Add New Button]
 
     .body
       .container
