--- a/views/widget/new.jade
+++ b/views/widget/new.jade
@@ -9,21 +9,21 @@ block content
       'angular',
       'angular-sanitize',
       'jquery',
-      'controllers/widget.edit',
+      'controllers/widget.add',
       'directives/qtip',
       'directives/http.prefix',
       'directives/autofocus',
     ],
     function(
       angular, ngSanitize, $,
-      WidgetEditController, qtipDirective,
+      WidgetAddController, qtipDirective,
       httpPrefixDirective, autoFocusDirective) {
 
         angular.module('voxboneApp', ['ngSanitize'])
           .directive('qtip', qtipDirective)
           .directive('httpPrefix', httpPrefixDirective)
           .directive('autoFocus', autoFocusDirective)
-          .controller('EditWidgetController', WidgetEditController);
+          .controller('WidgetAddController', WidgetAddController);
 
         angular.bootstrap(document, ['voxboneApp']);
 
@@ -38,12 +38,12 @@ block content
       .container
         .row
           .col-xs-12
-            h1 Edit a WebRTC Call Button
+            h1 Create a WebRTC Call Button
             p #[b Questions?] #[a(href="https://docs.google.com/document/d/1L6swwK_rVu_2XqSNMzmMRxBxL3YL50YTzkF6NaqeLqU/edit?usp=sharing" target="_blank") See our Frequently Asked Questions document.]
 
             #alert-success.alert.alert-success(style="display: none;")
 
-    .body(ng-controller="EditWidgetController" ng-init="initData={widget: #{JSON.stringify(widget)}, did: #{user.did}, widgetCode: '#{widget_code}'}")
+    .body(ng-controller="WidgetAddController")
       .container
         .row
           .col-md-6.left-col
@@ -70,14 +70,14 @@ block content
                   .form-group
                     label.control-label SIP URI
                       span.badge(data-toggle='tooltip' data-placement="right" title="This is the SIP address where inbound traffic from your Click2Vox button will be directed. Enter any valid SIP URI or use one of our diagnostic URIs – echo@ivrs or digits@ivrs") ?
+
                     select.form-control(ng-model="widget.sip_uri" ng-options="sip for sip in #{JSON.stringify(currentUser.getSipURIs())}" required)
                       option(value="") Select a SIP URI
                     .error-label(ng-show="widget_form.sip_uri.$touched" )
                       div(ng-show="widget_form.sip_uri.$error.required") SIP URI is required
-
                   .panel.panel-default
                     .panel-heading
-                      a.collapsed.title-toggle(data-toggle="collapse",data-target="#collapseAdvancedCallConfiguration",href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
+                      a.collapsed.title-toggle(data-toggle="collapse", data-target="#collapseAdvancedCallConfiguration", href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
                     .panel-collapse.collapse#collapseAdvancedCallConfiguration
                       .options-wrap.active
                         .form-group
@@ -117,7 +117,7 @@ block content
                             input(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="show_text_html")
                             span.radio-name Show text/HTML
                             span.badge(data-toggle='tooltip' data-placement="right" title="Instead of showing the button, display the entered HTML ") ?
-                            textarea.form-control(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.incompatible_browser_configuration == 'show_text_html'" ng-bind-html="widget.show_text_html_value" ng-model="widget.show_text_html_value" ng-model-options="{ updateOn: 'blur' }")
+                            textarea.form-control(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.incompatible_browser_configuration == 'show_text_html'" ng-model="widget.show_text_html_value" ng-model-options="{ updateOn: 'blur' }")
 
           .col-md-6.right-col
             .section
@@ -149,26 +149,13 @@ block content
                     span Widget Code Snippet
                       p Paste the following HTML code into your website or give it a try using on
 
-                      .btn-code-playground
-                        .btn-jsfiddle(ng-show="widget.showWidgetCode")
-                          form#code_debug_jsfiddle(action="https://jsfiddle.net/api/post/library/pure/" method="POST" target="_blank")
-                            input(type="hidden" name="html" value='{{ prepareHtmlForCodepen(widget.widget_code) }}')
-                            a(href="#" onclick="$('#code_debug_jsfiddle').submit();") JSFiddle
-                        .btn-jsfiddle(ng-show="widget.showWidgetCode")
-                          form#code_debug_codepen(action="https://codepen.io/pen/define" method="POST" target="_blank")
-                            input(type="hidden" name="data" value='{"html": "{{ prepareHtmlForCodepen(widget.widget_code) }}"}')
-                            a(href="#" onclick="$('#code_debug_codepen').submit();") CodePen
-
                   .widget-code-wrap
                     .sample.shadow-z-2#widget_code
                       pre
                         {{ widget.widget_code }}
-                    .codebox-actions(ng-show='widget.showWidgetCode')
-                      a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy to Clipboard
-                      a(href="#" class="hidden" id="generate-output-code" ng-click='widget.generateOutputCode()') Generate Code
 
               div
                 .pull-right
-                  button.btn.btn-default(ng-click='generateOutputCode()' ng-disabled="widget_form.$invalid || widget_form.sip_provisioning" ) Save Configuration
+                  button.btn.btn-default(ng-click='saveConfiguration()' ng-disabled="widget_form.$invalid || !widget.sip_uri" ) Save Configuration
                 .clearfix
                 br
