[vxb-sign-up-2] Add wizard (#162)
* folder removal

* button list moks page

* new sip modal call

* error alert style

* header fix

* [vxb-html-2] Integrating grunt task to compile less to css

* small ui fixes

* updates

* button list grouping

* button list grouping

* landing page mock

* step ui for adding new SIP

* landing page new styles

* [vxb-sign-up-2] Add Wizard

--- a/public/stylesheets/less/colors.less
+++ b/public/stylesheets/less/colors.less
@@ -7,4 +7,5 @@
 @light-purple:    #FFEAFE;
 @navbar-grey:     #92a5a5;
 @border-grey:     #d7dfe1; 
-@panel-bg:         #fbfcfc;
+@panel-bg:        #fbfcfc;
+@footer-color:    #D8DDE0;
