--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -50,15 +50,14 @@ pre {
   text-shadow: 1px 1px 0 rgba(255,255,255,1);
 }
 
-
 .user-pill {
   margin-right: 5px;
 }
-
 .no-bottom-border-radius {
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
+
 .progress.passwordStrength {
   -webkit-border-radius: 0 !important;
      -moz-border-radius: 0 !important;
@@ -74,6 +73,11 @@ pre {
   .save-sip {
     margin-left: 0px;
   }
+}
+
+.createButton.wizard .body{
+  padding-top: 35px;
+  margin-top: 5px;
 }
 
 /* adding this to prevent showing hidden tags while requirejs does its work*/
