--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -33,6 +33,9 @@ Main Css
 @import "less/createButton";
 @import "less/buttonList";
 @import "less/addNewModal";
+@import "less/addSip";
+@import "less/landingPage";
+
 
 /* Widget Style */
 @import "less/widget";
