--- a/public/stylesheets/less/buttonList.less
+++ b/public/stylesheets/less/buttonList.less
@@ -22,7 +22,6 @@
   }
 
   .group-header {
-
     position: relative;
     background: #fff;
     padding: 0 10px;
@@ -34,6 +33,10 @@
       vertical-align: middle;
       line-height: 40px;
       margin: 0;
+    }
+
+    .caretDown{
+      cursor: pointer;
 
       a{
         color: inherit;
@@ -53,6 +56,7 @@
     }
 
     .caretRight{
+      cursor: pointer;
       vertical-align: initial;
       display: inline-block;
       width: 0;
@@ -77,3 +81,4 @@
     }
   }
 }
+
