[vxb-welcome-2] Add new welcome page (#163)

--- a/views/landing.html
+++ b/views/landing.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="../../stylesheets/root.css">
+    <link rel="stylesheet" href="/stylesheets/root.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +30,7 @@
             <span class="subBrand"> Voxbone WebRTC Beta</span>
           </div>
           <div class="pull-right">
-            <a class="login withripple" href="#">Login</a>
+            <a class="login withripple" href="/login">Login</a>
           </div>
         </nav>
       </div>
@@ -40,7 +40,7 @@
         <br>
         <span class="block">No installs needed</span>
         <br>
-        <a class="btn btn-default btn-purple">Create Account</a>
+        <a class="btn btn-default btn-purple" href="/account/signup">Create Account</a>
       </div>
     </div>
 
@@ -97,3 +97,4 @@
 
   </body>
 </html>
+
