--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -53,7 +53,7 @@
     border: 1px solid @border-grey;
     .rounded(6px);
     &.preview {
-      border-top-left-radius: 0;     
+      border-top-left-radius: 0;
     }
     button{
       margin: 0 5px 10px;
@@ -125,6 +125,7 @@
   .preview{
     background: #f0f4f7;
     padding: 0;
+
     .prev-view{
       position: relative;
       padding: 45px 60px 45px;
@@ -174,8 +175,15 @@
           margin-left: 2px;
         }
       }
-      button{
+      button {
         margin: 0;
+        &[disabled]{
+          cursor: not-allowed;
+          filter: alpha(opacity=65);
+          -webkit-box-shadow: none;
+          box-shadow: none;
+          opacity: .65;
+        }
       }
     }
     .prev-code{
