--- a/views/widget/demo.jade
+++ b/views/widget/demo.jade
@@ -9,19 +9,19 @@ block content
       'angular',
       'angular-sanitize',
       'jquery',
-      'controllers/widget.edit',
+      'controllers/widget.demo',
       'directives/qtip',
-      'directives/http.prefix',
+      'directives/http.prefix'
     ],
     function(
       angular, ngSanitize, $,
-      WidgetEditController, qtipDirective,
+      WidgetDemoController, qtipDirective,
       httpPrefixDirective) {
 
         angular.module('voxboneApp', ['ngSanitize'])
           .directive('qtip', qtipDirective)
           .directive('httpPrefix', httpPrefixDirective)
-          .controller('EditWidgetController', WidgetEditController);
+          .controller('WidgetDemoController', WidgetDemoController);
 
         angular.bootstrap(document, ['voxboneApp']);
 
@@ -31,17 +31,15 @@ block content
 
   .div#control
 
-  .main.createButton
+  .main.createButton(class=showWizard ? 'wizard' : '')
     .header
       .container
         .row
           .col-xs-12
-            h1 Edit a WebRTC Call Button
+            h1 Demo WebRTC Call Button
             p #[b Questions?] #[a(href="https://docs.google.com/document/d/1L6swwK_rVu_2XqSNMzmMRxBxL3YL50YTzkF6NaqeLqU/edit?usp=sharing" target="_blank") See our Frequently Asked Questions document.]
 
-            #alert-success.alert.alert-success(style="display: none;")
-
-    .body(ng-controller="EditWidgetController" ng-init="initData={widget: #{JSON.stringify(widget)}, did: #{user.did}, widgetCode: '#{widget_code}'}")
+    .body(ng-controller="WidgetDemoController")
       .container
         .row
           .col-md-6.left-col
@@ -68,14 +66,15 @@ block content
                   .form-group
                     label.control-label SIP URI
                       span.badge(data-toggle='tooltip' data-placement="right" title="This is the SIP address where inbound traffic from your Click2Vox button will be directed. Enter any valid SIP URI or use one of our diagnostic URIs – echo@ivrs or digits@ivrs") ?
-                    select.form-control(ng-model="widget.sip_uri" ng-options="sip for sip in #{JSON.stringify(currentUser.getSipURIs())}" required)
+
+                    select.form-control(ng-model="widget.sip_uri" ng-options="sip for sip in #{JSON.stringify(demoSipUris)}" name="sip_uri" required)
                       option(value="") Select a SIP URI
-                    .error-label(ng-show="widget_form.sip_uri.$touched" )
-                      div(ng-show="widget_form.sip_uri.$error.required") SIP URI is required
+                    div(style="color: green" ng-show="widget_form.$dirty")
+                      div(ng-show="widget.sip_uri && widget.sip_uri!='#{demoSip}'") To try your own SIP URI please #[a(href="/account/signup") create an Account]
 
                   .panel.panel-default
                     .panel-heading
-                      a.collapsed.title-toggle(data-toggle="collapse",data-target="#collapseAdvancedCallConfiguration",href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
+                      a.collapsed.title-toggle(data-toggle="collapse", data-target="#collapseAdvancedCallConfiguration", href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
                     .panel-collapse.collapse#collapseAdvancedCallConfiguration
                       .options-wrap.active
                         .form-group
@@ -115,7 +114,7 @@ block content
                             input(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="show_text_html")
                             span.radio-name Show text/HTML
                             span.badge(data-toggle='tooltip' data-placement="right" title="Instead of showing the button, display the entered HTML ") ?
-                            textarea.form-control(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.incompatible_browser_configuration == 'show_text_html'" ng-bind-html="widget.show_text_html_value" ng-model="widget.show_text_html_value" ng-model-options="{ updateOn: 'blur' }")
+                            textarea.form-control(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.incompatible_browser_configuration == 'show_text_html'" ng-model="widget.show_text_html_value" ng-model-options="{ updateOn: 'blur' }")
 
           .col-md-6.right-col
             .section
@@ -132,7 +131,7 @@ block content
                   .togle-bg-tooltip
                     #[span.badge(data-toggle='tooltip' data-placement="left" data-html="true" data-width="350" title="You can click the button to make a call and test the service!<br>(once you setup your widget)") ?]
                   .widget-box#launch_call_div(ng-class="widget.button_style" ng-show="showCallButton()")
-                    button.btn-style.launch_call#launch_call(ng-disabled="!widget.sip_uri" ng-click="makeCall(#{currentUser.did})" qtip="You can click the button to make a call and test the service!<br>(once you setup your widget)" qtip-visible='true') #[span {{widget.button_label || 'Call Sales'}}]
+                    button.btn-style.launch_call#launch_call(ng-disabled="!widget.sip_uri" ng-click="makeCall(#{demoUser.did})" qtip="You can click the button to make a call and test the service!<br>(once you select a SIP URI)" qtip-visible='true') #[span {{widget.button_label || 'Call Sales'}}]
                     .widget-footer-left
                       a(href="https://test.webrtc.org/" target="_blank") Test your setup
                     .widget-footer-right
@@ -145,28 +144,16 @@ block content
                 .prev-code
                   .title
                     span Widget Code Snippet
-                      p Paste the following HTML code into your website or give it a try using on
-
-                      .btn-code-playground
-                        .btn-jsfiddle(ng-show="widget.showWidgetCode")
-                          form#code_debug_jsfiddle(action="https://jsfiddle.net/api/post/library/pure/" method="POST" target="_blank")
-                            input(type="hidden" name="html" value='{{ prepareHtmlForCodepen(widget.widget_code) }}')
-                            a(href="#" onclick="$('#code_debug_jsfiddle').submit();") JSFiddle
-                        .btn-jsfiddle(ng-show="widget.showWidgetCode")
-                          form#code_debug_codepen(action="https://codepen.io/pen/define" method="POST" target="_blank")
-                            input(type="hidden" name="data" value='{"html": "{{ prepareHtmlForCodepen(widget.widget_code) }}"}')
-                            a(href="#" onclick="$('#code_debug_codepen').submit();") CodePen
+                      p The following HTML code it is just for demo purposes. Please do not use it for real
 
                   .widget-code-wrap
                     .sample.shadow-z-2#widget_code
-                      pre
-                        {{ widget.widget_code }}
-                    .codebox-actions(ng-show='widget.showWidgetCode')
-                      a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy to Clipboard
-                      a(href="#" class="hidden" id="generate-output-code" ng-click='widget.generateOutputCode()') Generate Code
+                      pre.
+                        {{ widget.demoCode }}
 
               div
+                div.ng-cloak(style="color: green" ng-show="widget.createAccountAlert") To try your own WebRTC Call Button please #[a(href="/account/signup") create an Account] #[br] #[br]
                 .pull-right
-                  button.btn.btn-default(ng-click='generateOutputCode()' ng-disabled="widget_form.$invalid || widget_form.sip_provisioning" ) Save Configuration
+                  button.btn.btn-default(ng-click='widget.createAccountAlert=true' ng-disabled="widget_form.$invalid || !widget.sip_uri" ) Save Configuration
                 .clearfix
                 br
